force-app/main/default/objects/User_Snapshot__c/User_Snapshot__c.object-meta.xml
<CustomObject>
    <label>User Snapshot</label>
    <nameField>
        <displayFormat>RSS-{0000}</displayFormat>
        <label>User Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>