force-app/main/default/objects/User_Snapshot__c/fields/T_Level_2__c.field-meta.xml
<CustomField>
    <fullName>T_Level_2__c</fullName>
    <label>T-Level 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>