force-app/main/default/objects/User_Snapshot__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <description>Tenure in Months</description>
    <label>Tenure</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>